# 3dcg_research_and_implementation

./: .gitignore  CMakeLists.txt  Copy_of_depth_estimation.ipynb  PIFuHD_Demo.ipynb  VanishingPointCameraCalibration.ipynb  main.cpp  t_01.py  torch3d_01.ipynb
3dcoordinateTransformation/: CMakeLists.txt  LPR_GG_Homograph_calculation.py  Tracking_3dpsoe.py  Tracking_3dpsoe_revised.py  coordinateSystem.py  dataset_loader.py  facePoseEstimation.py  find_projected_pitch_plane.py  poselib.py  prepare_data.py  save_results_and_visualization.py  tracking_player_mt.py  ver_homography_matrix.txt
3dcoordinateTransformation/TaskRevised/: prepare_data.py  readme.txt.txt  requirements.txt  utils.py
3dcoordinateTransformation/data/: 2dCorrectFrames.txt
3dcoordinateTransformation/data/pose3d_data/: const.py
OpenGLSharma/: CMakeLists.txt  Display.cpp  Display.h  libs.h  main.cpp
book/LaneDetection/: InversePerspectiveMapping.ipynb
face3d/examples/: 1_pipeline.py
face3d/face3d/: __init__.py
face3d/face3d/mesh_numpy/: io.py
face3d/face3d/morphable_model/: __init__.py  fit.py  morphabel_model.py
mediapipe/: torch3d_01.ipynb
mesh3dprojects/: CMakeLists.txt
mesh3dprojects/vision3d/: vision_3d_01.py
ofiles/: CMakeLists.txt  main.cpp
python/: main.py
sfmlGame/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
sfmlGame/Configs/: config.txt  gamestate_keybinds.txt  supported_keys.txt
sfmlGame/Entity/: Entity.cpp  Entity.h
sfmlGame/Resources/: Button.cpp  Button.h
sfmlGame/States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
slam_01/: CMakeLists.txt  slam_01.categories  slam_01.kdev4
slam_01/.kdev4/: slam_01.kdev4
slam_01/src/: CMakeLists.txt  slam_01.cpp  slam_01.h  slam_01.json
slam_02/: CMakeLists.txt  main.cpp  slam_02.kdev4
slam_02/.kdev4/: slam_02.kdev4
src_1/: CMakeLists.txt  geometryShape.h  main.cpp  objectron3d.py  tflite2onnx.py
src_2/: camera.cpp  camera.h  geometryShape.cpp  main.cpp  utils.h
src_v1/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  featureMatching.cpp  main.cpp
